--- a/rules.html
+++ b/rules.html
@@ -113,7 +113,7 @@
 						</ul>
 					</div>
 					<p id="footnote">
-						網頁製作 : 資科三A 410907127 邱瑛蓁
+						網頁製作 : 資科四A 410907127 邱瑛蓁
 					</p>
 				</div>
 			</div>
